--- a/styles.css
+++ b/styles.css
@@ -7,12 +7,25 @@ body {
   background-color: wheat;
 }
 
+#upperDiv{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#game{
+    height: 100vh;
+    width: 100vw;
+}
+
+#game > #upperDiv {
+    margin-bottom: 10px;
+}
+
 #tictactoeDiv {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh;
-  width: 100%;
 }
 
 img{
